Nav overflow fix on mobile pt 11

--- a/blocks/src/blocks/nav-container/style.scss
+++ b/blocks/src/blocks/nav-container/style.scss
@@ -108,7 +108,8 @@
 
         .flyout-content {
             // height: calc(100vh - (var(--wp--preset--spacing--60) * 2));
-            // overflow-y: auto;
+            height: 100%;
+            overflow-y: scroll;
             box-sizing: border-box;
         }
     }
